fix:nav bar collapse when scroll down

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -8,9 +8,7 @@
   font-size: 24px;
   font-weight: bold;
 }
-.hide-navbar {
-  transform: translateY(-100%);
-}
+
 .fixed-top {
   position: fixed;
   top: 0;
